[package]
name = "drop_tower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.25.0"
egui_plot = "0.25.0"
egui_extras = { version = "0.25.0", features = ["all_loaders"] }
serde = "1.0.196"
image = "0.24.8"
rfd = "0.13.0"
chrono = { version = "0.4.33", features = ["serde"] }
serde_json = "1.0.113"
